objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RACI__c</fullName>
        <description>RACI du participant dans la réunion</description>
        <inlineHelpText>Niveau de responsabilité du participant dans cet atelier</inlineHelpText>
        <label>RACI</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                    <default>true</default>
                    <label>Invited</label>
                </value>
                <value>
                    <fullName>Present</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workshop__c</fullName>
        <label>Workshop</label>
        <referenceTo>Workshop__c</referenceTo>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Attendee</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>